--- a/index.css
+++ b/index.css
@@ -53,7 +53,7 @@ input {
   cursor: pointer;
   font-size: smaller;
   margin-left: 1ex;
-  text-align: center;
+  padding: 0;
   white-space: pre;
 }
 
